对旧的app名称进行修改并增加了中英两种名称

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">PoshmarkInc</string>
+    <string name="app_name_en">Sweet fish</string>
+    <string name="app_name_ch">甜鱼</string>
+    <string name="userPageButtonName_ch">我的</string>
 </resources>
