--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name_en">Sweet fish</string>
-    <string name="app_name_ch">甜鱼</string>
-    <string name="userPageButtonName_ch">我的</string>
+    <string name="app_name_cn">甜鱼</string>
+    <string name="userPageButtonName_cn">我的</string>
+    <string name="infomationPageButtonName_cn">消息</string>
 </resources>
