--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,8 @@
     <string name="activity_home_page_userpageview_mypublish">我发布的 0</string>
     <string name="activity_home_page_userpageview_mysold">我卖出的 0</string>
     <string name="activity_home_page_userpageview_mybought">我买到的 0</string>
-    <string name="activity_personal_user_page_follow">+ 关注</string>
     <string name="activity_personal_user_page_edit">编辑资料</string>
     <string name="userRules"><![CDATA[我已经详细阅读并同意《隐私政策》和《用户协议》]]></string>
+    <string name="OthersUserPageFollowButton_UnFollowed_Text">+ 关注</string>
+    <string name="OthersUserPageFollowButton_Followed_Text">取消关注</string>
 </resources>
