--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="userRules"><![CDATA[我已经详细阅读并同意《隐私政策》和《用户协议》]]></string>
     <string name="OthersUserPageFollowButton_UnFollowed_Text">+ 关注</string>
     <string name="OthersUserPageFollowButton_Followed_Text">取消关注</string>
+    <string name="activity_home_page_userpageview_fan">粉丝</string>
 </resources>
